fix merge error

--- a/app/globals.css
+++ b/app/globals.css
@@ -10,7 +10,7 @@ body {
   background-color: black;
 }
 
-.canvas1 {
+.canvas {
   background-image: url("../public/backgrounds/navmobileBG.jpg");
   background-position: center;
   background-size: cover;
@@ -35,7 +35,7 @@ svg {
 }
 
 .textshadow {
-  text-shadow: 0.3rem 00.3rem 0.4rem #000;
+  text-shadow: 0.3rem 0.3rem 0.4rem #000;
 }
 
 @media (min-width: 1280px) {
