--- a/app/globals.css
+++ b/app/globals.css
@@ -1,20 +1,30 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
-
+.back,
+.front,
+.item-1,
+.item-2,
+.item-3 {
+  background-size: cover;
+}
 ::-webkit-scrollbar {
   display: none;
 }
 body {
   background-color: #000;
 }
-.gotcha {
+.gotcha,
+[id^="item"],
+svg {
   display: none;
+}
+.canvas1 {
+  background-image: url(../public/backgrounds/navmobileBG.jpg);
 }
 .canvas1,
 .contact,
 .project {
-  background-image: url(../public/backgrounds/navmobileBG.jpg);
   background-position: center;
   background-size: cover;
 }
@@ -33,29 +43,30 @@ body {
 .front5 {
   background-image: url(../public/projects/5.jpg);
 }
-.front5 {
-  background-image: url(../public/projects/5.jpg);
-}
 .front6 {
   background-image: url(../public/projects/6.jpg);
 }
-.contact,
-.more,
-.project {
+.contact {
   background-image: url(../public/backgrounds/contactmobile.jpg);
 }
-.more,
-.project {
+.more {
   background-image: url(../public/backgrounds/newbg.jpg);
 }
 .project {
   background-image: url(../public/backgrounds/projectmobile.jpg);
 }
-svg {
-  display: none;
-}
 .textshadow {
   text-shadow: 0.3rem 0.3rem 0.4rem #000;
+}
+.enter {
+  text-shadow: 0.5rem 0.5rem 0.4rem #7f7878;
+  border: 0.3rem solid #6e6969;
+  padding: 1rem;
+  border-radius: 1rem;
+  transition: 0.3s ease-in-out;
+}
+.enter:hover {
+  border: 0.4rem solid #fff;
 }
 @media (min-width: 1280px) {
   .canvas1 {
@@ -98,7 +109,7 @@ svg {
   right: 0;
   opacity: 0;
   padding: 10px 0;
-  transition: all 0.5s ease-in-out;
+  transition: 0.5s ease-in-out;
   display: flex;
   align-items: center;
   justify-content: center;
@@ -109,6 +120,12 @@ svg {
   display: inline-block;
   padding: 12px;
 }
+.back,
+.front,
+.front:after {
+  border-radius: 10px;
+  background-position: center;
+}
 .arrow-next,
 .arrow-prev {
   position: absolute;
@@ -118,17 +135,14 @@ svg {
   left: 30px;
   transform: translateY(-50%) rotate(135deg);
 }
+.back,
+.inner {
+  position: absolute;
+  left: 0;
+}
 .arrow-next {
   right: 30px;
   transform: translateY(-50%) rotate(-45deg);
-}
-[id^="item"] {
-  display: none;
-}
-.item-1,
-.item-2,
-.item-3 {
-  background-size: cover;
 }
 :target ~ .item-1 {
   opacity: 0;
@@ -159,27 +173,21 @@ svg {
 .container:hover .front,
 .front {
   -webkit-transition: -webkit-transform 0.7s cubic-bezier(0.4, 0.2, 0.2, 1);
-  transition: transform 0.7s cubic-bezier(0.4, 0.2, 0.2, 1);
   transition: transform 0.7s cubic-bezier(0.4, 0.2, 0.2, 1),
     -webkit-transform 0.7s cubic-bezier(0.4, 0.2, 0.2, 1);
 }
 .back,
 .front {
   box-shadow: 0 14px 18px 0 rgba(0, 0, 0, 0.5);
-  border-radius: 10px;
   -webkit-backface-visibility: hidden;
   backface-visibility: hidden;
   text-align: center;
   min-height: 250px;
-  background-position: center;
-  background-size: cover;
 }
 .back {
   background: #cedce7;
   background: linear-gradient(45deg, #4d4e73 0, #808b8b 100%);
-  position: absolute;
   top: 0;
-  left: 0;
   width: 100%;
 }
 .front .inner p:after,
@@ -200,8 +208,6 @@ svg {
   opacity: 0.6;
   -webkit-backface-visibility: hidden;
   backface-visibility: hidden;
-  border-radius: 10px;
-  background-position: center;
   background-size: contain;
 }
 .container:hover .back,
@@ -211,12 +217,10 @@ svg {
 .inner {
   transform: translateY(-50%) translateZ(5rem) scale(0.94);
   top: 50%;
-  position: absolute;
-  left: 0;
   padding: 1rem;
   -webkit-box-sizing: border-box;
   box-sizing: border-box;
-  outline: 1px solid transparent;
+  outline: transparent solid 1px;
   -webkit-perspective: inherit;
   perspective: inherit;
   z-index: 2;
@@ -226,9 +230,9 @@ svg {
   justify-content: space-between;
 }
 .project-subtitle {
-  color: #0099ff;
+  color: #09f;
   font-weight: 700;
-  text-shadow: 0.1rem 0.1rem 0.4rem rgb(0, 0, 0);
+  text-shadow: 0.1rem 0.1rem 0.4rem #000;
   font-size: 1.2rem;
 }
 .container .back {
