add hotjar analytics

--- a/app/globals.css
+++ b/app/globals.css
@@ -8,13 +8,21 @@
 .item-3 {
   background-size: cover;
 }
+.gotcha {
+  opacity: 0;
+  position: absolute;
+  top: 0;
+  left: 0;
+  height: 0;
+  width: 0;
+  z-index: -1;
+}
 ::-webkit-scrollbar {
   display: none;
 }
 body {
   background-color: #000;
 }
-.gotcha,
 [id^="item"],
 svg {
   display: none;
