--- a/app/navPage/nav-anim.css
+++ b/app/navPage/nav-anim.css
@@ -16,6 +16,14 @@
     transform: translatey(20px);
   }
 }
+.navbg {
+  background: rgb(0, 0, 0);
+  background: linear-gradient(
+    180deg,
+    rgba(0, 0, 0, 1) 1%,
+    rgba(109, 120, 126, 1) 75%
+  );
+}
 #nav,
 .nav-container {
   position: absolute;
